# AUS_1_SP

./: CMakeLists.txt
data/: 2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  geograficke_oblasti.csv  obce.csv  regiony.csv  republiky.csv  uzemie.csv
source/: CMakeLists.txt  ConsoleEnvironment.cpp  ConsoleEnvironment.h  ConsoleSelector.h  main.cpp
source/Algorithms/: Comparators.cpp  Comparators.h  Itertools.h  Predicates.cpp  Predicates.h  Querying.h  Sorting.h
source/Containers/: ArrayList.h  LinkedList.h  LinkedListTree.h  LinkedTable.h  NodeBasedTree.h  Table.h
source/DataHandling/: CsvLineReader.h  DataHolder.cpp  DataHolder.h  LandUnitData.cpp  LandUnitData.h  TownData.cpp  TownData.h
