add_executable(main_app
        main.cpp

        Algorithms/Querying.h
        Algorithms/Sorting.h

        DataHandling/TownData.cpp
        DataHandling/TownData.h

        DataHandling/DataHolder.h

        Containers/ArrayList.h
        Containers/LinkedList.h
        Containers/LinkedListTree.h
        Containers/NodeBasedTree.h
        Containers/Table.h
        Containers/LinkedTable.h
)

