add_executable(main_app
        main.cpp

        Algorithms/Querying.h
        Algorithms/Sorting.h
        Algorithms/Predicates.h
        Algorithms/Predicates.cpp

        DataHandling/TownData.cpp
        DataHandling/TownData.h

        DataHandling/LandUnitData.h
        DataHandling/DataHolder.h


        Containers/ArrayList.h
        Containers/LinkedList.h
        Containers/LinkedListTree.h
        Containers/NodeBasedTree.h
        Containers/Table.h
        Containers/LinkedTable.h
)

