add_executable(main_app
        main.cpp

        Algorithms/Querying.h
        Algorithms/Sorting.h
        Algorithms/Predicates.h
        Algorithms/Predicates.cpp
        Algorithms/Comparators.h
        Algorithms/Comparators.cpp
        Algorithms/Itertools.h

        DataHandling/LandUnitData.h
        DataHandling/DataHolder.h
        DataHandling/DataHolder.cpp


        Containers/ArrayList.h
        Containers/LinkedList.h
        Containers/LinkedListTree.h
        Containers/NodeBasedTree.h
        Containers/LinkedTable.h
)

